Zwischenstand, Test braucht noch Context